--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,12 +1,13 @@
-.card {
-    width: 10rem;
-    height: 14rem;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    position: absolute;
-    transition: margin-right 0.4s ease;
-    /*right: 1px;*/
-}
+/*.card {*/
+/*    width: 10rem;*/
+/*    height: 14rem;*/
+/*    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);*/
+/*    border-radius: 10px;*/
+/*    position: absolute;*/
+/*    transition: margin-right 0.4s ease;*/
+/*    left: 1px;*/
+/*    !*right: 1px;*!*/
+/*}*/
 
 .color-red {
     color: red;
